pkl-core/src/test/files/LanguageSnippetTests/input/errors/fullStackTraces2.pkl
local const invalid: String = 1

const function f1() = invalid

local const top = f1()

class Foo {
  foo = top
}

aFoo = new Foo {}
